--- a/Boter_Kaas_Eieren/MainWindow.xaml
+++ b/Boter_Kaas_Eieren/MainWindow.xaml
@@ -5,8 +5,47 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Boter_Kaas_Eieren"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="630" Width="600" BorderThickness="0" ResizeMode="CanMinimize">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="200"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="200"/>
+            <RowDefinition Height="200"/>
+            <RowDefinition Height="200"/>
+        </Grid.RowDefinitions>
+        <Button Name="btnLeftTop" Grid.Column="0" Grid.Row="0" Click="btnLeftTop_Click">
+            
+        </Button>
+        <Button Name="btnTopCenter" Content="" Grid.Column="1" Grid.Row="0" Click="btnTopCenter_Click">
+            
+        </Button>
+        <Button Name="btnTopRight" Margin="0,0,6,0" Content="" Grid.Column="2" Grid.Row="0" Click="btnTopRight_Click">
+            
+        </Button>
+        <Button Name="btnMiddleCenter" Content="" Grid.Column="1" Grid.Row="1" Click="btnMiddleCenter_Click"> 
+            
+        </Button>
+        <Button Name="btnMiddleLeft" Content="" Grid.Column="0" Grid.Row="1" Click="btnMiddleLeft_Click">
+            
+        </Button>
+        <Button Name="btnMiddleRight" Margin="0,0,6,0" Content="" Grid.Column="2" Grid.Row="1" Click="btnMiddleRight_Click">
+            
+        </Button>
+        <Button Name="btnRightBottom" Margin="0,0.2,6,-0.2" Content="" Grid.Column="2" Grid.Row="2" Click="btnRightBottom_Click">
+            
+        </Button>
+        <Button Name="btnMiddleBottom" Margin="0,0.2,0,-0.2" Content="" Grid.Column="1" Grid.Row="2" Click="btnMiddleBottom_Click">
+            
+        </Button>
+        <Button Name="btnLeftBottom" Margin="0,0.2,0,-0.2" Content="" Grid.Column="0" Grid.Row="2" Click="btnLeftBottom_Click">
+            
+        </Button>
         
     </Grid>
+
+    
 </Window>
